<resources>
    <string name="app_name">Daily TODO</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Don’t have account?</string>
    <string name="create_new_task">Create New Task</string>
    <string name="show_all">Show all</string>
    <string name="personal_task">Personal Tasks</string>
    <string name="team_task">Team TaskS</string>
    <string name="pending_tasks">Pending Task</string>
    <string name="personal">Personal</string>
    <string name="team">Team</string>
    <string name="completed_task">Completed Task</string>
    <string name="task_title">Title</string>
    <string name="hint_task">Task title</string>
    <string name="task_type">Type</string>
    <string name="description">Description</string>
    <string name="hint_descriptions">Task description</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="in_progress">In Progress</string>
    <string name="all">TODO</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="not_result">No results found!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_wifi">Check your Wi-Fi</string>
    <string name="try_again">Try again</string>
    <string name="don_t_have_account_sign_up">Don’t have account?</string>
    <string name="register">Register</string>
    <string name="register_success">You have successfully registered!, Please login</string>
    <string name="create_Todo_success">You have successfully add new todo!</string>
    <string name="details_todos">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="username_validation_error">Username should be at least 4 digits</string>
    <string name="password_validation_error">Password should be at least 8 digits</string>
    <string name="confirm_password_validation_error">Password confirmation does not match</string>
    <string name="loading">Loading...</string>
    <string name="aya_abdelaziz_hawraa"><![CDATA[Aya Abdelaziz &Hawraa....]]></string>
    <string name="search_view_hint">search...</string>
    <string name="uxui_studio_meeting">UXUI Studio Meeting</string>
    <string name="_21_30">21:30</string>
    <string name="_24_08_2023">24-08-2023</string>
    <string name="todo_description">This is my description amet consectetur. Nec sed ut venenatis. Nulla amet amet...</string>
    <string name="all_">All</string>
    <string name="todo">TODO</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="dont_have_account">Don’t have an account? sign up</string>
    <string name="update_succeeded">Update succeeded</string>
    <string name="todo_status">Todo</string>
    <string name="in_progress_status">In progress</string>
    <string name="done_status">Done</string>
    <string name="update_todo_success">Todo updated successfully</string>
    <string name="todo_update_failed">Todo update failed</string>
    <string name="update_failed">Update failed</string>
    <string name="name">Name</string>
    <string name="_name">Name</string>
    <string name="title">Title</string>
    <string name="_task_title">Task title</string>
    <string name="type">Type</string>
    <string name="personalButton">Personal</string>
    <string name="teamButton">Team</string>
    <string name="_description">Description</string>
    <string name="task_description">Task description</string>
    <string name="_create">Create</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="adding_todo_fails_try_again">Adding todo fails, try again</string>
    <string name="create_todo">Create Todo</string>

</resources>