<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart_statistic"
        android:layout_width="@dimen/_126dp"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        app:layout_constraintBottom_toBottomOf="@id/card_view_statistic_personal"
        app:layout_constraintEnd_toEndOf="@+id/card_view_statistic_personal"
        app:layout_constraintTop_toTopOf="@id/card_view_statistic_personal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_statistic_personal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_158dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:foreground="@drawable/background_card"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_team_text_static"
        app:layout_constraintTop_toTopOf="@id/text_view_pending_todo_text_static"
        app:layout_constraintVertical_bias="0.476"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_view_pending_todo_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_40dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pending_tasks"
        android:textColor="#DEFFFFFF"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/card_view_statistic_personal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_personal_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/personal"
        android:drawableStart="@drawable/ic_point_circle_bold"
        android:drawablePadding="@dimen/_8dp"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/_12sp"
        app:layout_constraintStart_toStartOf="@id/text_view_pending_todo_text_static"
        app:layout_constraintTop_toBottomOf="@id/text_view_pending_todo_text_static" />

    <TextView
        android:id="@+id/text_view_personal_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/purple_5_text"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_personal_text_static"
        app:layout_constraintStart_toEndOf="@id/text_view_personal_text_static"
        app:layout_constraintTop_toTopOf="@id/text_view_personal_text_static"
        tools:text="12" />

    <TextView
        android:id="@+id/text_view_team_text_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/team"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/_12sp"
        android:layout_marginTop="@dimen/_8dp"
        android:drawableStart="@drawable/ic_point_circle_light"
        android:drawablePadding="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="@id/text_view_personal_text_static"
        app:layout_constraintTop_toBottomOf="@id/text_view_personal_text_static" />

    <TextView
        android:id="@+id/text_view_team_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/purple_5_text"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_team_text_static"
        app:layout_constraintStart_toEndOf="@id/text_view_team_text_static"
        app:layout_constraintTop_toTopOf="@id/text_view_team_text_static"
        tools:text="8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_completed_todo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="86dp"
        android:layout_marginTop="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintEnd_toStartOf="@+id/card_view_pending_todo"
        app:layout_constraintStart_toStartOf="@+id/card_view_statistic_personal"
        app:layout_constraintTop_toBottomOf="@id/card_view_statistic_personal" />


    <TextView
        android:id="@+id/text_view_completed_todo_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="@id/card_view_completed_todo"
        app:layout_constraintStart_toStartOf="@id/card_view_completed_todo"
        app:layout_constraintTop_toTopOf="@+id/card_view_completed_todo"
        tools:text="12" />

    <TextView
        android:id="@+id/text_view_completed_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/completed_task"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="@id/text_view_completed_todo_result"
        app:layout_constraintStart_toStartOf="@id/text_view_completed_todo_result"
        app:layout_constraintTop_toBottomOf="@+id/text_view_completed_todo_result" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_pending_todo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_86dp"
        android:layout_marginStart="@dimen/_8dp"
        app:cardCornerRadius="@dimen/_16dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_statistic_personal"
        app:layout_constraintStart_toEndOf="@id/card_view_completed_todo"
        app:layout_constraintTop_toTopOf="@id/card_view_completed_todo" />


    <TextView
        android:id="@+id/text_view_pending_todo_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="@id/card_view_pending_todo"
        app:layout_constraintStart_toStartOf="@id/card_view_pending_todo"
        app:layout_constraintTop_toTopOf="@+id/card_view_pending_todo"
        tools:text="8" />

    <TextView
        android:id="@+id/text_view_pending_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pending_tasks"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="@id/text_view_pending_todo_result"
        app:layout_constraintStart_toStartOf="@id/text_view_pending_todo_result"
        app:layout_constraintTop_toBottomOf="@+id/text_view_completed_todo_result" />

</androidx.constraintlayout.widget.ConstraintLayout>